# ROS-Main

./: .gitignore  .gitmodules  2019-05-08-17-55-27.bag  CommentingTemplate.py  READEM_ubuntu_18.md  README.md  antenna_config.bash  controller.launch  controller_launch.bash  gps.txt  init_repo.bash  launch_manager.py  left_enc.csv  left_pwm.csv  other_conventions.txt  right_enc.csv  right_pwm.csv  robot_launch.bash  rover.launch
arm_code/: package.xml  (+1 more)
user_interface/: CMakeLists.txt  launch.launch~  package.xml  package.xml~  rosLaunch.sh  rosLaunch.sh~  rosLaunch~
user_interface/launch/: launch.launch~
user_interface/src/: ui.perspective
vision/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  debug_utils.py  hog_lane_detection_test.py  hsv_colors.xlsx  hsv_colors_labeled.csv  igvc_trackbar.py  lane_detection.py  lane_detection_2.py  lane_detection_3.py  lane_detection_4.py  lane_detection_5.py  lane_detection_6.py  lane_detection_test.py  lane_detector_test.rviz  lane_detector_test_2.rviz  package.xml  trackbar_hough.py
vision/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
vision/igvc_processing/: igvc_processing.py  model.py  view.py
vision/neural_nets/: clear_training_artifacts.sh  confusion_mat_tools.py  networks.py  networks2.py  nn_utils.py  nn_weights  p1_generate_descriptors.py  p1_train_svm.py  p2_nn_conv.py  run_nn.py  run_unit_tests.sh  train_network.py  yolo2_partial_weights
vision/settings/: .trackbar_settings.yaml.swp  trackbar_settings.yaml
vision/src/: tennis_detection.py
(+532 files in other folders)
