<package>
    :
    <name>user_interface</name>
    <version>0.1</version>
    <description>user_interface provides the GUI for the robot</description>
    <maintainer email="curtin@rpi.edu">Nicholas Curtis</maintainer>

    <license>GPLv2</license>

    <author>Nicholas Curtis</author>

    <buildtool_depend>catkin</buildtool_depend>

    <!--<node name="Launcher" pkg="user_interface" type="launch" /> -->


    <run_depend>python-rospkg</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>rosgraph_msgs</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend version_gte="0.2.12">rqt_gui</run_depend>
    <run_depend>rqt_gui_py</run_depend>

    <export>

    </export>
</package>
